Closed Bug 695795 Opened 13 years ago Closed 12 years ago

The ProcessUpdates function does not need to get a reference for the appVersion

Categories

(Toolkit :: Application Update, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

Details

Attachments

(1 file)

      No description provided.
Attached patch Patch (v1)Splinter Review
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #568148 - Flags: review?
Attachment #568148 - Flags: review? → review?(robert.bugzilla)
Comment on attachment 568148 [details] [diff] [review]
Patch (v1)

Brian, please take this review so I can focus on the silent update reviews. Thanks
Attachment #568148 - Flags: review?(robert.bugzilla) → review?(netzen)
Comment on attachment 568148 [details] [diff] [review]
Patch (v1)

Review of attachment 568148 [details] [diff] [review]:
-----------------------------------------------------------------

Indeed. Looks good.
Attachment #568148 - Flags: review?(netzen) → review+
https://hg.mozilla.org/mozilla-central/rev/5f606d407c14
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla12
You need to log in before you can comment on or make changes to this bug.