Bug 695795 - Drop the reference argument in ProcessUpdates because it's not really needed; r=bbondy DONTBUILD